--- a/playbook_kubernetes.yml
+++ b/playbook_kubernetes.yml
@@ -1,9 +1,12 @@
 
 [k8s-master]
 ec2-3-238-117-40.compute-1.amazonaws.com
-  
+
 [worker]
-TODO: add 4 workersk
+ec2-52-90-208-59.compute-1.amazonaws.com
+ec2-3-93-180-82.compute-1.amazonaws.com
+ec2-54-161-0-148.compute-1.amazonaws.com
+ec2-54-175-213-36.compute-1.amazonaws.com
 
 [cluster:children]
 k8-master
