--- a/playbook_kubernetes.yml
+++ b/playbook_kubernetes.yml
@@ -1,17 +1,6 @@
-
-[k8s-master]
-ec2-3-238-117-40.compute-1.amazonaws.com
-
-[worker]
-ec2-52-90-208-59.compute-1.amazonaws.com
-ec2-3-93-180-82.compute-1.amazonaws.com
-ec2-54-161-0-148.compute-1.amazonaws.com
-ec2-54-175-213-36.compute-1.amazonaws.com
-
-[cluster:children]
-k8-master
-worker
-
-[cluster:vars]
-ansible_ssh_common_args='-o StrictHostKeyChecking=no'
-ansible_ssh_user=ubuntu
+- hosts: all
+  become: true
+  gather_facts: False
+  tasks:
+    - name: Bootstrap a host without python2 installed
+      raw: test -e /usr/bin/python || (apt -y update && apt install -y python)
