update the readme to describe 6.1 files

--- a/playbook_kubernetes.yml
+++ b/playbook_kubernetes.yml
@@ -117,7 +117,7 @@
 
 - hosts: k8-master
   tasks:
-    - name: kubectl get nodes
+    - name: Execute kubectl get nodes and register the output
       shell:
         cmd: kubectl get nodes
       register: kubectl_get_nodes
