--- a/playbook_performance.yml
+++ b/playbook_performance.yml
@@ -3,6 +3,6 @@
 - hosts: k8-master
   become: yes
   tasks:
-    - name: Kubernetes Metrics Server
+    - name: Start the Kubernetes Metrics Server
       become: true
       shell: kubectl apply -f ./metrics_server.yml
